--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - checkout
       run:
       - Name: print_hello
-      - coomand: "echo hello"
+      - command: "echo hello"
 
   welcome: circleci/welcome-orb@0.4.1
 # Orchestrate or schedule a set of jobs
