--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ version: 2.1
 # Use a package of configuration called an orb.
 orbs:
   # Declare a dependency on the welcome-orb
+  welcome: circleci/welcome-orb@0.4.1
 jobs:
   print_hello:
     docker:
@@ -13,11 +14,10 @@ jobs:
       - Name: print_hello
       - command: "echo hello"
 
-  welcome: circleci/welcome-orb@0.4.1
 # Orchestrate or schedule a set of jobs
 workflows:
   # Name the workflow "welcome"
-  welcome:
+  print_hello-workflow:
     # Run the welcome/run job in its own container
     jobs:
-      - welcome/run
+      - print_hello/run
