--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,14 +5,18 @@ orbs:
   # Declare a dependency on the welcome-orb
   welcome: circleci/welcome-orb@0.4.1
 jobs:
-  print_hello:
+  say-hello:
+    # Specify the execution environment.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: circleci/node:13.8.0
+      - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
-      run:
-      - Name: print_hello
-      - command: "echo hello"
+      - run:
+          name: "Say hello"
+          command: "echo Hello, World!"
 
 # Orchestrate or schedule a set of jobs
 workflows:
