--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,9 +17,22 @@ jobs:
       - run:
           name: "hello"
           command: "echo Hello"
+  print_world:
+    # Specify the execution environment.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+    docker:
+      - image: circleci/node:13.8.0
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+    steps:
+      - checkout
+      - run:
+          name: "World"
+          command: "echo World"
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   print_hello-workflow:
     jobs:
       - print_hello
+      - print_world
