--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       docker:
       - image: circleci/node:13.8.0
     steps:
-      - run: echo $MY_ENV_VAR
+      - run: echo $Name
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
