--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,10 +6,17 @@ orbs:
   welcome: circleci/welcome-orb@0.4.1
 jobs:
   print_hello:
+    # Specify the execution environment.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+    docker:
+      - image: circleci/node:13.8.0
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
-      - run: echo Hello
+      - checkout
+      - run:
+          name: "hello"
+          command: "echo Hello"
   print_world:
     # Specify the execution environment.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
@@ -18,7 +25,9 @@ jobs:
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
-      - run: echo World
+      - checkout
+      - run:
+          command: "echo World"
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
