--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,15 @@ jobs:
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - run: echo World
+  print_name:
+    # Specify the execution environment.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+    docker:
+      - image: circleci/node:13.8.0
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+    steps:
+      - run: echo $Name
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
@@ -24,5 +33,8 @@ workflows:
     jobs:
       - print_hello
       - print_world:
+          requires:
+            - print_hello
+      - print_name:
           requires:
             - print_hello
