--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,40 +1,17 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
+
+workflows:
+  test-env-vars:
+    jobs:
+      - build
+
 jobs:
-  print_hello:
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - run: echo Hello
-  print_world:
-    # Specify the execution environment.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      - image: circleci/node:13.8.0
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
-    steps:
-      - run: echo World
-  print_name:
-    # Specify the execution environment.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+  build:
     docker:
       - image: cimg/base:2020.01
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
-      - run: echo $MY_ENV_VAR
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
-workflows:
-  print_hello-workflow:
-    jobs:
-      - print_hello
-      - print_world:
-          requires:
-            - print_hello
-      - print_name:
-          requires:
-            - print_world
+      - checkout
+      - run:
+          name: "echo an env var that is part of our project"
+          command: |
+            echo $MY_ENV_VAR
