--- a/template.yml
+++ b/template.yml
@@ -4,7 +4,7 @@ Resources:
   Properties:
     SecurityGroups:
       - !Ref InstanceSecurityGroup
-    KeyName: udacity
+    KeyName: lab-1kp
     ImageId: 'ami-08e6b682a466887dd' # you may need to find out what instance types are available in your region - use https://cloud-images.ubuntu.com/locator/ec2/
   InstanceSecurityGroup:
   Type: 'AWS::EC2::SecurityGroup'
