--- a/template.yml
+++ b/template.yml
@@ -1,17 +1,18 @@
 Resources:
   Ec2Instance:
-  Type: 'AWS::EC2::Instance'
-  Properties:
-    SecurityGroups:
-      - !Ref InstanceSecurityGroup
-    KeyName: lab-1kp
-    ImageId: 'ami-08e6b682a466887dd' # you may need to find out what instance types are available in your region - use https://cloud-images.ubuntu.com/locator/ec2/
+    Type: 'AWS::EC2::Instance'
+    Properties:
+      SecurityGroups:
+        - !Ref InstanceSecurityGroup
+      KeyName: lab-1.kp
+      ImageId: 'ami-00399ec92321828f5' # you may need to find out what instance types are available in your region - use https://cloud-images.ubuntu.com/locator/ec2/
+      InstanceType: t2.micro
   InstanceSecurityGroup:
-  Type: 'AWS::EC2::SecurityGroup'
-  Properties:
-    GroupDescription: Enable SSH access via port 22
-    SecurityGroupIngress:
-      - IpProtocol: tcp
-        FromPort: '22'
-        ToPort: '22'
-        CidrIp: 0.0.0.0/0
+    Type: 'AWS::EC2::SecurityGroup'
+    Properties:
+      GroupDescription: Enable SSH access via port 22
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: '22'
+          ToPort: '22'
+          CidrIp: 0.0.0.0/0
