--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
               --template-file template.yml \
               --stack-name my-stack
       - run: return 1
-      - destroy_environment
+      - destroy_environment:
           when: on_fail
 
 workflows:
