--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,8 @@ jobs:
               --template-file template.yml \
               --stack-name my-stack
       - run: return 1
-      - destroy_environment:
-          when: on_fail
+      - destroy_environment
+        when: on_fail
 
 workflows:
   my_workflow:
