--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
               --stack-name my-stack
       - run: return 1
       - destroy_environment
-          when: on_fail
+          when: "on_fail"
 
 workflows:
   my_workflow:
