--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ commands:
       - run:
           name: Destroy environment
           command: |
-            aws cloudformation delete-stack --stack-name mystack
+            aws cloudformation delete-stack --stack-name my-stack
 
 jobs:
   create_infrastructure:
@@ -22,7 +22,7 @@ jobs:
               --stack-name my-stack
       - run: return 1
       - destroy_environment
-          when: "on_fail"
+          when: on_fail
 
 workflows:
   my_workflow:
