--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ commands:
           name: Destroy environment
           command: |
             aws cloudformation delete-stack --stack-name my-stack
+          when: on_fail
 
 jobs:
   create_infrastructure:
@@ -21,8 +22,7 @@ jobs:
               --template-file template.yml \
               --stack-name my-stack
       - run: return 1
-      - destroy_environment:
-          when: on_fail
+      - destroy_environment
 
 workflows:
   my_workflow:
